--- a/app-frontend/index.html
+++ b/app-frontend/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
 
-    <title>Vite + React + TS</title>
+    <title>Restaurant App</title>
   </head>
   <body>
     <div id="root"></div>
